correction of media query, somethngs is not aligning here

--- a/index.css
+++ b/index.css
@@ -86,11 +86,12 @@ body {
     .container {
         max-width: 100%;
         width: 100%;
-        min-height: 100%;  
-        padding: 20px 40px;
+        max-height: 100%;  
+        padding: 40px 40px;
         border-radius: 0;
         display: flex;
         flex-direction: column;
+        row-gap: 5px;
         justify-content: center;
     }  
 
@@ -109,6 +110,7 @@ body {
 
     .container .header .fullname {
         padding: 2px;
+        margin: 2px;
         text-align: center;
         font-size: 1.2em;
     }
@@ -118,11 +120,11 @@ body {
     }
 
     .container .job {
-        font-size: 1.2em;
+        font-size: 1.4em;
     }
 
     .container .short-bio {
-        font-size: 1em;
+        font-size: 1.2em;
         padding: 0;
     }
 
